--- a/modules/Account-Security/CFT/security.yml
+++ b/modules/Account-Security/CFT/security.yml
@@ -7,7 +7,7 @@ Resources:
       EnableDnsHostnames: true
       Tags:
         - Key: Name
-          Value: !Ref EnvironmentName
+          Value: ManilaProduction
 
 
           
